--- a/css/styles.css
+++ b/css/styles.css
@@ -1,161 +1,247 @@
-* {
-  box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css?family=Manrope:700|Manrope:400');
 
-a {
-  color: rgb(52, 152, 219);
+:root {
+  --text: hsl(0, 0%, 99%);
+  --textDim: hsl(0, 0%, 60%);
+  --background: hsl(0, 0%, 7%);
+  --primary: hsl(253, 100%, 65%);
+  --primaryBg: hsla(155, 100%, 65%, 1%);
+  --primaryHi: hsla(155, 100%, 75%, 25%);
+  --primaryFg: hsl(155, 100%, 85%);
+  --secondary: hsl(156, 51%, 14%);
+  --secondaryFg: hsl(156, 51%, 75%);
+  --secondaryBg: hsla(156, 51%, 14%, 5%);
+  --secondaryHi: hsla(156, 51%, 30%, 50%);
+  --accent: hsl(155, 100%, 94%);
+  --accentBg: hsla(155, 100%, 94%, 1%);
+  --accentHi: hsla(155, 100%, 100%, 25%);
 }
 
 body {
-  background-color: rgb(255, 255, 255);
-  padding-top: 70px;
+  font-family: 'Manrope';
+  font-weight: 400;
+  background-color: var(--background);
+  color: var(--text);
+  padding: 0 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
-/* Style the header */
-.header {
-  padding: 30px;
-  text-align: left;
-  font-size: 35px;
-  color: rgb(15, 82, 186);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2rem;
+  color: var(--textDim);
+  width: 100%;
+  box-sizing: border-box;
+  z-index: 9999;
 }
 
-/* Create three unequal columns that floats next to each other */
-.column {
-  float: left;
-  padding: 20px;
-  background-color: rgb(40, 40, 43);
-  color: white;
+.menu:hover {
+  color: var(--text);
+  cursor: pointer;
 }
 
-.left,
-.right {
-  width: 25%;
+.sitename {
+  font-weight: bold;
 }
 
-.left-large {
-  width: 75%;
+.grid {
+  position: absolute;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  z-index: -1;
 }
 
-.middle {
-  width: 50%;
+.grid-svg {
+  height: 80%;
+  width: 80%;
+  position: relative;
+  z-index: 1;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.blur {
+  height: 12rem;
+  width: 12rem;
+  background-color: var(--primary);
+  filter: blur(100px);
+  border-radius: 100px;
+  z-index: 0;
+  position: absolute;
 }
 
-/* Style the footer */
-.footer {
-  background-color: rgb(40, 40, 43);
-  padding: 10px;
-  text-align: center;
-  color: white;
+.title {
+  font-size: 10rem;
+  font-weight: 700;
+  letter-spacing: -0.8rem;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  justify-content: center;
+  align-self: center;
+  height: 100%;
+  z-index: 1000;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  .column {
-    width: 100%;
+.title > p {
+  margin: 0;
+  line-height: 10rem;
+  width: auto;
+}
+
+.title > p:nth-child(1){
+  align-self: flex-start;
+}
+
+.title > p:nth-child(4){
+  color: var(--primary);
+  align-self: flex-end;
+}
+
+.material-icons {
+  display: none;
+  fill: var(--text);
+}
+
+
+
+.button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+  height: 50px;
+  width: 160px;
+  z-index: 9999;
+}
+
+button {
+  height: 50px;
+  width: 160px;
+  clip-path: path("M 0 25 C 0 -5, -5 0, 80 0 S 160 -5, 160 25, 165 50 80 50, 0 55, 0 25");
+  border: none;
+  border-radius: 13px;
+  background-color: var(--primaryBg);
+  box-shadow: 0px -3px 15px 0px var(--primaryHi) inset;
+  color: var(--primaryFg);
+  font-family: "Manrope";
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  transform: translateY(0px);
+  transition: all 0.2s ease;
+}
+
+span {
+  width: 100px;
+  height: 60px;
+  background-color: var(--primaryHi);
+  border-radius: 100%;
+  filter: blur(20px);
+  position: absolute;
+  bottom: -50%;
+  transition: all 0.2s ease;
+}
+
+.button:hover > span {
+  opacity: 60%;
+}
+
+.button:hover > button {
+  transform: translateY(5px);
+}
+
+.button.first {
+  top: 12%;
+  right: 20%;
+}
+
+.button.sec {
+  bottom: 13%;
+  right: 11%;
+}
+
+.button.sec > button {
+  background-color: var(--accentBg);
+  box-shadow: 0px -3px 15px 0px var(--accentHi) inset;
+  color: var(--accentFg);
+}
+
+.button.sec > span {
+  background-color: var(--accentHi);
+}
+
+.button.third {
+  bottom: 25%;
+  left: 15%;
+}
+
+.button.third > button {
+  background-color: var(--secondaryBg);
+  box-shadow: 0px -3px 15px 0px var(--secondary) inset;
+  color: var(--secondaryFg);
+}
+
+.button.third > span {
+  background-color: var(--secondaryHi);
+}
+
+
+.top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  opacity: 50%;
+}
+
+.bottom-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 50%;
+}
+
+
+
+
+@media screen and (max-width: 1000px) {
+  .title {
+    font-size: 4rem;
+    line-height: 4rem;
   }
-}
-
-.image-responsive {
-  max-width: 100%;
-  height: auto;
-  padding-bottom: 20px;
-}
-
-.image-responsive-small {
-  max-width: 12%;
-  height: auto;
-  padding-bottom: 20px;
-}
-
-.item-lg {
-  color: white;
-  font-size: 28px;
-  text-decoration: none;
-}
-
-.item-sm {
-  color: white;
-  text-decoration: none;
-}
-
-.external-links-box {
-  margin-top: 50%
-}
-
-ul.no-bullets {
-  list-style: none;
-  padding-left: 0;
-
-}
-
-.external-links-box-item {
-  padding: 20px;
-  text-decoration: none;
-}
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
-}
-
-.card {
-  background-color: white;
-  padding: 20px;
-  margin-top: 20px;
-  color: black;
-}
-
-.card-item {
-  color: black;
-}
-
-.linkedin:hover {
-  color: rgb(0, 123, 181);
-}
-
-.github:hover {
-  color: rgb(18, 86, 136);
-}
-
-.twitch:hover {
-  color: rgb(169, 112, 255);
-}
-
-.youtube:hover {
-  color: rgb(207, 76, 76);
-}
-
-.gallery {
-  margin: 10px 50px;
-  background-color: rgb(40, 40, 43);
-}
-
-.gallery img {
-  transition: 1s;
-  padding: 15px;
-  max-width: 100%;
-  height: auto;
-  padding-bottom: 20px;
-}
-
-.gallery img:hover {
-  transform: scale(1.1);
-}
-
-@media (max-width: 800px) {
-  .gallery img {
-    width: 100%;
+  
+  .title > p {
+    line-height: 5rem;
+    letter-spacing: -0.3rem;
   }
+  
+  nav > :not(.sitename, .material-icons) {
+    display: none;
+  }
+  
+  nav {
+    justify-content: space-between;
+  }
+  
+  .material-icons {
+    display: flex;
+    align-items: center;
+  }
+  
 }
